fixing some additional text alignment and inner img style issues

--- a/src/components/Tile/Tile.module.scss
+++ b/src/components/Tile/Tile.module.scss
@@ -44,6 +44,11 @@
 
 .rounded {
   border-radius: 10px;
+  overflow: hidden;
+  > div {
+    border-radius: inherit;
+    overflow: inherit;
+  }
 }
 
 .circular {
